src/objects/IT_Change_Task__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAA</fullName>
                </value>
                <value>
                    <fullName>NPAA</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>HPP CAA</fullName>
                </value>
                <value>
                    <fullName>Standard Salesforce</fullName>
                </value>
                <value>
                    <fullName>IBB to MAR messaging</fullName>
                </value>
                <value>
                    <fullName>Online Banking</fullName>
                </value>
                <value>
                    <fullName>DocuGen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_impact__c</fullName>
        <label>Business impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Audit issue: level A</fullName>
                </value>
                <value>
                    <fullName>Audit issue: level B</fullName>
                </value>
                <value>
                    <fullName>Audit issue: level C</fullName>
                </value>
                <value>
                    <fullName>Internal department finding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_request_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change request case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>IT &amp; Change Tasks</relationshipLabel>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_impact__c</fullName>
        <label>Customer impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Deployed__c</fullName>
        <label>Date Deployed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_required_by__c</fullName>
        <label>Date required by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Development_environment__c</fullName>
        <label>Development environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_change_reference__c</fullName>
        <label>Previous change reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>IT &amp; Change Tasks</relationshipLabel>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raised_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Raised by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sandbox</label>
        <referenceTo>Sandbox__c</referenceTo>
        <relationshipLabel>IT &amp; Change Tasks</relationshipLabel>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_reference__c</fullName>
        <formula>Name &amp;&quot;: &quot;&amp; Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Application__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>EBS</fullName>
                </value>
                <value>
                    <fullName>EBA</fullName>
                </value>
                <value>
                    <fullName>BizTalk</fullName>
                </value>
                <value>
                    <fullName>New Voice Media</fullName>
                </value>
                <value>
                    <fullName>DHCP</fullName>
                </value>
                <value>
                    <fullName>Websense</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Domain controller</fullName>
                </value>
                <value>
                    <fullName>MIMIX</fullName>
                </value>
                <value>
                    <fullName>Netapp</fullName>
                </value>
                <value>
                    <fullName>SQL Server</fullName>
                </value>
                <value>
                    <fullName>ASP</fullName>
                </value>
                <value>
                    <fullName>ASP.Net</fullName>
                </value>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>IFM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed: Not actioned</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Descoped</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In testing</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Ready for testing</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>To be defined</fullName>
                </value>
                <value>
                    <fullName>To be deployed</fullName>
                </value>
                <value>
                    <fullName>To be scheduled</fullName>
                </value>
                <value>
                    <fullName>With third party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Idea</fullName>
                </value>
                <value>
                    <fullName>Approved project/CAT</fullName>
                </value>
                <value>
                    <fullName>Defined requirement</fullName>
                </value>
                <value>
                    <fullName>Defined error</fullName>
                </value>
                <value>
                    <fullName>Undefined error</fullName>
                </value>
                <value>
                    <fullName>Ongoing tasks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IT &amp; Change Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Project__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Development_environment__c</columns>
        <columns>Previous_change_reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Audit_actions</fullName>
        <columns>NAME</columns>
        <columns>Schedule_reference__c</columns>
        <columns>Category__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Status__c</columns>
        <columns>Date_required_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>contains</operation>
            <value>audit,internal</value>
        </filters>
        <label>Audit and Internal findings actions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deployed_Completed_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_IT_Change</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Development_list</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Type__c</columns>
        <columns>Service_Application__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Customer_impact__c</columns>
        <columns>Business_impact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.Development_Tasks</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>close</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>cancelled</value>
        </filters>
        <label>Development list</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ISA</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Category__c</columns>
        <columns>Project__c</columns>
        <columns>Date_Started__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.Development_Tasks,IT_Change_Task__c.Change_Delivery_Tasks</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>cancel</value>
        </filters>
        <filters>
            <field>Title__c</field>
            <operation>contains</operation>
            <value>ISA</value>
        </filters>
        <label>ISA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Development_environment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.IT_Tasks</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>IT Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kirsty_s_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Development_environment__c</columns>
        <columns>Sandbox__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>equals</operation>
            <value>abdul salam</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Abdul&apos;s tasks</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_IT_Change</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lukes_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Status__c</columns>
        <columns>Sandbox__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Luke</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed: Not actioned</value>
        </filters>
        <label>Lukes Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Problem_List</fullName>
        <columns>NAME</columns>
        <columns>Schedule_reference__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Problem List</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Sandbox__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sandbox__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed,Closed: Not actioned</value>
        </filters>
        <filters>
            <field>Development_environment__c</field>
            <operation>notContain</operation>
            <value>EBS,TBC,na,new</value>
        </filters>
        <filters>
            <field>Service_Application__c</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.Development_Tasks</value>
        </filters>
        <label>Sandboxes</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>IT &amp; Change Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT &amp; Change Tasks</pluralLabel>
    <recordTypes>
        <fullName>Change_Delivery_Tasks</fullName>
        <active>true</active>
        <description>All change delivery taks</description>
        <label>Change Delivery Tasks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Development_Tasks</fullName>
        <active>true</active>
        <description>For use with all enhancements and problems relating to systems</description>
        <label>Development Tasks</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Tasks</fullName>
        <active>true</active>
        <description>All IT tasks whether problems or enhancements</description>
        <label>IT Tasks</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>